testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionAnonymousWithSub.errors.txt
index.js(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(6,14): error TS2339: Property 't' does not exist on type 'exports'.
index.js(9,16): error TS2339: Property 'Sub' does not exist on type 'typeof exports'.
index.js(11,14): error TS2339: Property 'instance' does not exist on type 'Sub'.


==== index.js (4 errors) ====
    module.exports = class {
    ~~~~~~~~~~~~~~~~~~~~~~~~
        /**
    ~~~~~~~
         * @param {number} p
    ~~~~~~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        constructor(p) {
    ~~~~~~~~~~~~~~~~~~~~
            this.t = 12 + p;
    ~~~~~~~~~~~~~~~~~~~~~~~~
                 ~
!!! error TS2339: Property 't' does not exist on type 'exports'.
        }
    ~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Sub = class {
                   ~~~
!!! error TS2339: Property 'Sub' does not exist on type 'typeof exports'.
        constructor() {
            this.instance = new module.exports(10);
                 ~~~~~~~~
!!! error TS2339: Property 'instance' does not exist on type 'Sub'.
        }
    }
    